martini tutorial flow

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     </head>
     <body>
         <h1>Narrative Visualization to Study the Impact of the NFL's Player Safety Initiatives for Concussions</h1>
+        <div id="tutorial-overlay" class="tutorial-overlay">
+            <div id="tutorial-box" class="tutorial-box">
+                <span id="tutorial-close" class="tutorial-close">&times;</span>
+                <p id="tutorial-text"></p>
+            </div>
+        </div>
         <div class="overview">
             <p1>The NFL previously ignored decades of research on the degenerative long-term effects of brain trauma, and didn’t take enough steps to protect its employees. Thousands of now-settled lawsuits brought on by former players forced the NFL to change their ways. Through this narrative visualization, we dive into the correlation between the NFL’s increased safety measures and the number of concussions spanning the last decade.</p>
         </div>
